ghc-4335c07/testsuite/tests/polykinds/T7438.stderr

T7438.hs:6:14: error:
    • Couldn't match expected type ‘p1’ with actual type ‘p’
        ‘p’ is untouchable
          inside the constraints: b ~ a
          bound by a pattern with constructor:
                     Nil :: forall k (a :: k). Thrist a a,
                   in an equation for ‘go’
          at T7438.hs:6:4-6
      ‘p’ is a rigid type variable bound by
        the inferred type of go :: Thrist a b -> p -> p1 at T7438.hs:6:1-16
      ‘p1’ is a rigid type variable bound by
        the inferred type of go :: Thrist a b -> p -> p1 at T7438.hs:6:1-16
      Possible fix: add a type signature for ‘go’
    • In the expression: acc
      In an equation for ‘go’: go Nil acc = acc
    • Relevant bindings include
        acc :: p (bound at T7438.hs:6:8)
        go :: Thrist a b -> p -> p1 (bound at T7438.hs:6:1)
